with ios client of console.google.developers.com for google signin

--- a/app.json
+++ b/app.json
@@ -24,7 +24,17 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
+      "bundleIdentifier": "revents.expo.googlesignin",
+      "config": {
+        "googleSignIn": {
+
+          "reservedClientId": "<YOUR_IOS_CLIENT_ID>"
+        }
+      }
+    },
+    "android": {
+        "package": "revents.expo.googlesignin",
+        "googleServicesFile": "./google-services.json"
     }
   }
 }
