checking google signin for standalone

--- a/app.json
+++ b/app.json
@@ -28,7 +28,7 @@
       "config": {
         "googleSignIn": {
 
-          "reservedClientId": "<YOUR_IOS_CLIENT_ID>"
+          "reservedClientId": "com.googleusercontent.apps.682667176462-t8ng7a2089vqn38svtipkau8jduaoq2b"
         }
       }
     },
