--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "expo": "~36.0.0",
     "expo-facebook": "^8.0.0",
+    "expo-google-app-auth": "^8.0.0",
+    "expo-google-sign-in": "~8.0.0",
     "expo-linear-gradient": "^8.0.0",
     "firebase": "^7.6.2",
     "react": "~16.9.0",
